--- a/lib/localization/th.json
+++ b/lib/localization/th.json
@@ -82,5 +82,14 @@
   "recent_orders": "คำสั่งซื้อล่าสุด",
   "search_or_ask": "ค้นหาหรือถามคำถาม",
   "solved": "แก้ไขแล้ว",
-  "unsolved": "ยังไม่แก้ไข"
+  "unsolved": "ยังไม่แก้ไข",
+  "faq_questions": [
+    "วิธียกเลิกการระงับ P2P",
+    "วิธีค้นหา Restrictions Removal Center",
+    "ฉันจะทราบผลการอุทธรณ์การยกเลิกการระงับได้อย่างไร",
+    "หากการอุทธรณ์ของคุณไม่ได้รับการยอมรับ/ปฏิเสธ",
+    "หากการอุทธรณ์ของคุณได้รับการยอมรับ/เสร็จสมบูรณ์",
+    "หากคุณไม่มีการระงับ P2P แต่ไม่สามารถโพสต์โฆษณาได้",
+    "ผู้พำนักใน EEA (ยุโรป) โปรดระวังการบังคับใช้กฎ MiCA Stablecoin"
+  ]
 }
